force-app/main/default/objects/Meter_Reading_Schedule__c/Meter_Reading_Schedule__c.object-meta.xml
<CustomObject>
    <label>Meter Reading Schedule</label>
    <nameField>
        <label>Meter Reading Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meter Reading Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>