force-app/main/default/objects/Meter_Reading_Schedule__c/fields/April_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>April_Meter_Read_Date__c</fullName>
    <label>April Meter Read Date</label>
    <type>Date</type>
</CustomField>