force-app/main/default/objects/Meter_Reading_Schedule__c/fields/August_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>August_Meter_Read_Date__c</fullName>
    <label>August Meter Read Date</label>
    <type>Date</type>
</CustomField>