force-app/main/default/objects/Meter_Reading_Schedule__c/fields/December_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>December_Meter_Read_Date__c</fullName>
    <label>December Meter Read Date</label>
    <type>Date</type>
</CustomField>