force-app/main/default/objects/Meter_Reading_Schedule__c/fields/February_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>February_Meter_Read_Date__c</fullName>
    <label>February Meter Read Date</label>
    <type>Date</type>
</CustomField>