force-app/main/default/objects/Meter_Reading_Schedule__c/fields/January_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>January_Meter_Read_Date__c</fullName>
    <label>January Meter Read Date</label>
    <type>Date</type>
</CustomField>