force-app/main/default/objects/Meter_Reading_Schedule__c/fields/July_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>July_Meter_Read_Date__c</fullName>
    <label>July Meter Read Date</label>
    <type>Date</type>
</CustomField>