force-app/main/default/objects/Meter_Reading_Schedule__c/fields/June_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>June_Meter_Read_Date__c</fullName>
    <label>June Meter Read Date</label>
    <type>Date</type>
</CustomField>