force-app/main/default/objects/Meter_Reading_Schedule__c/fields/March_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>March_Meter_Read_Date__c</fullName>
    <label>March Meter Read Date</label>
    <type>Date</type>
</CustomField>