force-app/main/default/objects/Meter_Reading_Schedule__c/fields/May_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>May_Meter_Read_Date__c</fullName>
    <label>May Meter Read Date</label>
    <type>Date</type>
</CustomField>