force-app/main/default/objects/Meter_Reading_Schedule__c/fields/November_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>November_Meter_Read_Date__c</fullName>
    <label>November Meter Read Date</label>
    <type>Date</type>
</CustomField>