force-app/main/default/objects/Meter_Reading_Schedule__c/fields/October_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>October_Meter_Read_Date__c</fullName>
    <label>October Meter Read Date</label>
    <type>Date</type>
</CustomField>