force-app/main/default/objects/Meter_Reading_Schedule__c/fields/Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Status__c</fullName>
    <description>This field is used to prevent someone from using an outdated meter read date from a previous year. Meter reading schedules are update each year. Do not use an inactive schedule to predict a current year&apos;s readings.</description>
    <formula>if(
AND(
TODAY()&gt;= January_Meter_Read_Date__c,
TODAY()&gt;= December_Meter_Read_Date__c,
ISBLANK(December_Meter_Read_Date__c )=false)=true,&quot;INACTIVE&quot;,&quot;ACTIVE&quot;)</formula>
    <inlineHelpText>This field is used to prevent someone from using an outdated meter read date from a previous year. Meter reading schedules are update each year. Do not use an inactive schedule to predict a current year&apos;s readings.</inlineHelpText>
    <label>Schedule Status</label>
    <type>Text</type>
</CustomField>