force-app/main/default/objects/Meter_Reading_Schedule__c/fields/September_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>September_Meter_Read_Date__c</fullName>
    <label>September Meter Read Date</label>
    <type>Date</type>
</CustomField>