force-app/main/default/objects/Meter_Reading_Schedule__c/fields/Utility_lookup__c.field-meta.xml
<CustomField>
    <fullName>Utility_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the lookup to Utility object.</description>
    <label>Utility</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipLabel>Meter Reading Schedules</relationshipLabel>
    <relationshipName>Meter_Reading_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>