force-app/main/default/objects/Meter_Reading_Schedule__c/fields/Year_Effective__c.field-meta.xml
<CustomField>
    <fullName>Year_Effective__c</fullName>
    <description>This is the year the schedule is effective for. Do not apply schedule for a past year for current meter reading.</description>
    <inlineHelpText>This is the year the schedule is effective for. Do not apply schedule for a past year for current meter reading.</inlineHelpText>
    <label>Year Effective</label>
    <length>4</length>
    <type>Text</type>
</CustomField>